<resources>
    <string name="app_name">Future Gurdians</string>
    <string name="future_guardians">Future Guardians</string>
    <string name="initiative">Initiative</string>
    <string name="future_initiative">Future Guardians Initiative</string>
    <string name="start">Get  started</string>
    <string name="education_text">Learn importance of conserving environment and how</string>
    <string name="join">Join</string>
    <string name="community_text">Participate in community development</string>
    <string name="support_text">We support desperate hearts and make the feel right</string>
    <string name="carbon_text">We help you trace the carbon in your land seamlessly</string>
    <string name="few_steps">Hey there you are a few steps away</string>
    <string name="please_log_sign">Please login or signup to continue with your action please</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="have_noAcc">Have no account?</string>
    <string name="haveAcc">Have account?</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="welcome">Welcome back</string>
    <string name="password_label">Password here</string>
    <string name="email_label">Email here</string>
    <string name="register">Register with us</string>
    <string name="title_activity_admin_users">AdminUsersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search here</string>
    <string name="all">All</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="books">Books</string>
    <string name="discuss">Discuss</string>
    <string name="home">Home</string>
    <string name="hi_james">Hi James</string>
    <string name="our_programs">Our programs</string>
    <string name="education">Education</string>
    <string name="community">community</string>
    <string name="support">Support</string>
    <string name="reports">Reports</string>
    <string name="get_reports">Get reports on what has ben done so far</string>
    <string name="carbon">Carbon</string>
    <string name="log_out">Log out</string>
    <string name="settings">settings</string>
    <string name="by_michael_mboya">By Michael Mboya</string>
    <string name="_5_years_ago">5 years ago</string>
    <string name="how_to_plant_a_tree">How to plant a tree…</string>
    <string name="profile">Profile</string>
    <string name="call_text">Our planet is facing unprecedented environmental challenges. Climate change, pollution, and biodiversity loss threaten the health of our planet and future generations. But there is hope. By making conscious choices and taking collective action, we can create a more sustainable future.</string>
    <string name="copy_jalsoft">\@Jalsoft</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="overview_text">Sustainable Solutions for a Greener Future Protect Our Planet, Together</string>
    <string name="we_can_save">We Can Save</string>
    <string name="the_future">The Future</string>
    <string name="do_together">Let us do it together</string>
    <string name="choose_donation">Choose Donation Frequency</string>
    <string name="text_donate">Help us reach our goals and target By just a coin.Aything give is appreciated!</string>
    <string name="monthly">Monthly</string>
    <string name="one_time">One Time</string>
    <string name="choose_amount">Choose Amount</string>
    <string name="_50">$50</string>
    <string name="_25">$25</string>
    <string name="_10">$10</string>
    <string name="donate_now">Donate now</string>
</resources>