<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".NavActivity">
    <LinearLayout
        android:id="@+id/main_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:id="@+id/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:textColor="#056D1B"
        android:textSize="32sp"
        android:textStyle="normal"
        android:layout_gravity="center"
        android:text="@string/future_initiative"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:text="@string/few_steps"/>
        <TextView
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textColor="#003"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:text="@string/please_log_sign"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingEnd="30dp"
            android:paddingStart="60dp"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#236C26"
                android:textAlignment="center"
                android:elevation="20dp"
                android:selectAllOnFocus="true"
                android:id="@+id/loginButton"
                android:text="@string/log_in"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#236C26"
                android:id="@+id/signupButton"
                android:layout_marginStart="10dp"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/collect_waste"/>

</RelativeLayout>