<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wh_bg"
    android:layout_height="match_parent"
    tools:context=".ActivityDashboard">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eee">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/collect_waste"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1B62F307">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/header_title"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@drawable/header_bg">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/home_logo"
                android:src="@drawable/home_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:text="@string/future_initiative"/>
        </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/body"
                android:layout_marginTop="60dp"
                android:padding="10dp">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_tab">
                    <TableRow android:layout_marginBottom="10dp"
                        android:background="@drawable/file_name_bg">
                        <EditText android:inputType="text"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:id="@+id/search_text"
                            android:hint="@string/search_here"
                            android:textColor="#000000"
                            android:textColorHint="#A42B2B1D"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:background="@drawable/search_bg"/>
                        <ImageButton android:layout_height="match_parent"
                            android:layout_width="40dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/black_search_24"
                            android:background="@drawable/search_bt_bg"
                            android:id="@+id/searchEduBtn"/>

                    </TableRow>
                </TableLayout>
                <com.google.android.material.tabs.TabLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/inp_bg"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/search_tab"
                    app:tabTextColor="#de000000"
                    app:tabSelectedTextColor="#0B6E00"
                    android:id="@+id/nav_tab">
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tooltipText="@string/all"
                        android:text="@string/all"/>
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/images"/>
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/videos"/>
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/books"/>
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/discuss"/>

                </com.google.android.material.tabs.TabLayout>
                <androidx.viewpager2.widget.ViewPager2
                    android:layout_below="@id/nav_tab"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/view_pager"/>
    </RelativeLayout>
    </RelativeLayout>
</FrameLayout>