<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wh_bg"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eee">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/collect_waste"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1B62F307">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollableLogin">
        <LinearLayout
            android:id="@+id/main_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/welcome"
                android:textColor="#056D1B"
                android:textSize="32sp"
                android:textStyle="normal" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/inp_bg"
                    android:paddingTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/email_24" />

                    <EditText
                        android:id="@+id/loginEmail"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:textColor="#000000"
                        android:textColorHint="#A42B2B1D"
                        android:layout_weight="1"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/inp_bg"
                        android:hint="@string/email_label"
                        android:inputType="textEmailAddress" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/inp_bg"
                    android:paddingTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/lock_24" />

                    <EditText
                        android:id="@+id/loginPassword"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:textColor="#000000"
                        android:textColorHint="#A42B2B1D"
                        android:background="@drawable/inp_bg"
                        android:hint="@string/password_label"
                        android:inputType="textPassword" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPass"
                android:textSize="20sp"
                android:id="@+id/forgotPassword"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:textColor="#e3e"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/log_in"
                android:textColor="#fff"
                android:textSize="20sp"
                android:id="@+id/loginButton"
                android:layout_gravity="center"
                android:backgroundTint="#337104"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="40dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:backgroundTint="#000"
                    android:layout_gravity="center_vertical"
                    android:layout_height="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="16sp"
                    android:layout_marginStart="30dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:id="@+id/signupButton"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:textColor="#e3e"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:backgroundTint="#000"
                    android:layout_gravity="center_vertical"
                    android:layout_height="2dp"/>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>